--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!-- saved from url=(0043)https://onlinebuzz.in/contact-us/index.html -->
+
 <html class="html" lang="en-US">
 <!-- Mirrored from Krishna_Online.in/ by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 06 Sep 2022 15:13:48 GMT --><!-- Added by HTTrack -->
 
@@ -703,10 +703,10 @@
 													display: inline-block
 												}
 											</style> 
-											<a href="https://onlinebuzz.in/contact-us/index.html">
+												<a href="https://krishnaonline.shop/">
 												<img width="103" height="120" src="./demo.2_files/logo4.png"
 													class="attachment-full size-full" alt="" loading="lazy"> 
-											</a>
+												</a>
 										</div>
 									</div>
 								</div>
@@ -759,9 +759,11 @@
 													vertical-align: middle;
 													display: inline-block
 												}
-											</style> <a href="https://onlinebuzz.in/contact-us/index.html">
+											</style> 
+											<a href="https://krishnaonline.shop/">
 												<img width="103" height="120" src="./demo.2_files/logo4.png"
-													class="attachment-full size-full" alt="" loading="lazy"> </a>
+													class="attachment-full size-full" alt="" loading="lazy"> 
+												</a>
 										</div>
 									</div>
 								</div>
@@ -1419,9 +1421,7 @@
 													data-id="76f45c9" data-element_type="widget"
 													data-widget_type="heading.default">
 													<div class="elementor-widget-container">
-														<h2 class="elementor-heading-title elementor-size-default"><a
-																href="https://onlinebuzz.in/contact-us/privacy-policy/index.html">Privacy
-																Policy</a></h2>
+														
 													</div>
 												</div>
 											</div>
@@ -1538,9 +1538,7 @@
 												<div class="elementor-element elementor-element-f1cd8ce elementor-widget elementor-widget-text-editor"
 													data-id="f1cd8ce" data-element_type="widget"
 													data-widget_type="text-editor.default">
-													<div class="elementor-widget-container">
-														<p>Copyright © 2022 Krishna_Online.in</p>
-													</div>
+									
 												</div>
 											</div>
 										</div>
