--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<script src="https://kit.fontawesome.com/8e347ddc29.js" crossorigin="anonymous"></script>
 	<meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
 
-	<link rel="icon" href="favicon.png" type="image/x-icon">
+	<link rel="icon" href="favicon.ico" type="image/x-icon">
 	<title>Guru Online Book</title>
 	<meta name="description" content="Get Your Online Cricket ID. We have a one-stop solution for all your online sports needs. Best Cricket Id Provider In India For IPL Matches. Fast Withdrawal. Safe &amp; Secure.">
 	<link rel="stylesheet" type="text/css" href="./index_files/owl.css">
